# consciousactivation

./: .gitignore  00_START_HERE.md  FOLDER_MAP.md  PACKAGE_VALIDATION_OUTPUT.json  PACKAGE_VALIDATION_REPORT.md  PHASE_01_START_HERE.md  PHASE_03_START_HERE.md  PHASE_04_START_HERE.md  PHASE_05_START_HERE.md  PHASE_06_START_HERE.md  README.md  RELEASE_NOTES.md  WORKSPACE_MANIFEST.json  requirements-phase7-dev.txt
01_ATOMIC_HARNESS_BUILDER/: .gitignore  00_ALIGNMENT_START_HERE.md  AGENTS.md  CURRENT_PROJECT_STATUS.md  LOCAL_VERIFICATION.json  PROGRAM_STATUS_EXPORT.yaml  pyproject.toml
01_ATOMIC_HARNESS_BUILDER/addendum/: PRD_ADDENDUM.md  V2_1_BROWNFIELD_DELTA.md
01_ATOMIC_HARNESS_BUILDER/contracts/integration/: CATEGORY_PROFILE_COMPATIBILITY.yaml  SOURCE_PROVENANCE_MAPPING.yaml
01_ATOMIC_HARNESS_BUILDER/development-capsules/BQA-P0-P1-TRUST-CORRECTION/: ACCEPTANCE_CRITERIA.md  ALLOWED_FILE_SCOPE.yaml  AUTHORITATIVE_REFERENCES.yaml  CAPSULE_MANIFEST.json  CAPSULE_VALIDATION_REPORT.md  COMPLETION_RECEIPT_TEMPLATE.yaml  CONTRACT_AND_SCHEMA_REFERENCES.yaml  CORRECTION_CONTRACT.yaml  DEPENDENCY_RECEIPT.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION.yaml  IMPLEMENTATION_AUTHORIZATION_REPORT.md  IMPLEMENTATION_SCOPE.md  NON_GOALS.md  OBSERVABILITY_PLAN.md  OWNED_REQUIREMENTS.csv  QA_FINDING_INPUT.yaml  README.md  RELEVANT_ADRS.md  RELEVANT_TECH_SPECS.md  SECURITY_AND_AUTHORITY_BOUNDARIES.md  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/PX-AM-001/: CAMPAIGN_CONTRACT.yaml  CAPSULE_MANIFEST.json  IMPLEMENTATION_AUTHORIZATION.yaml  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-01.01/: ACCEPTANCE_CRITERIA.md  CAPSULE_MANIFEST.json  CAPSULE_VALIDATION_REPORT.md  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DEPENDENCY_RECEIPT.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION.yaml  NON_GOALS.md  README.md  RELEVANT_ADRS.md  RELEVANT_TECH_SPECS.md  STORY_COMPLETION_RECEIPT.yaml  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-01.01-SYNTHETIC-PROOF/: ALLOWED_FILE_SCOPE.yaml  CAPSULE_MANIFEST.json  CAPSULE_VALIDATION_REPORT.md  COMPLETION_RECEIPT_TEMPLATE.yaml  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DEPENDENCY_RECEIPT.yaml  EMPTY_SKILL_POLICY_REFERENCE.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION_REPORT.md  IMPLEMENTATION_SCOPE.md  OWNED_REQUIREMENTS.csv  README.md  SECURITY_AND_AUTHORITY_BOUNDARIES.md  SYNTHETIC_TARGET_PROFILE_FIXTURE.yaml  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-01.02/: CAPSULE_MANIFEST.json  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DEPENDENCY_RECEIPT.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION.yaml  OBSERVABILITY_PLAN.md  OWNED_REQUIREMENTS.csv  README.md  RELEVANT_ADRS.md  RELEVANT_TECH_SPECS.md  STORY_CONTRACT.yaml  SYNTHETIC_SOURCE_PROFILE.json  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-01.03/: ACCEPTANCE_CRITERIA.md  ALLOWED_FILE_SCOPE.yaml  AUTHORITATIVE_STORY_REFERENCES.yaml  CAPSULE_MANIFEST.json  CAPSULE_VALIDATION_REPORT.md  COMPLETION_RECEIPT_TEMPLATE.yaml  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DEPENDENCY_RECEIPT.yaml  EVIDENCE_INDEX_CONTRACT.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION.yaml  IMPLEMENTATION_AUTHORIZATION_REPORT.md  IMPLEMENTATION_SCOPE.md  NON_GOALS.md  OBSERVABILITY_PLAN.md  OWNED_REQUIREMENTS.csv  README.md  RELEVANT_ADRS.md  RELEVANT_TECH_SPECS.md  SECURITY_AND_AUTHORITY_BOUNDARIES.md  STORY_CONTRACT.yaml  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-01.04/: ACCEPTANCE_CRITERIA.md  ALLOWED_FILE_SCOPE.yaml  AUTHORITATIVE_STORY_REFERENCES.yaml  CAPSULE_MANIFEST.json  CAPSULE_VALIDATION_REPORT.md  COMPLETION_RECEIPT_TEMPLATE.yaml  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DEPENDENCY_RECEIPT.yaml  FAILURE_AND_ROLLBACK_PLAN.md  IMPLEMENTATION_AUTHORIZATION.yaml  IMPLEMENTATION_AUTHORIZATION_REPORT.md  IMPLEMENTATION_SCOPE.md  NON_GOALS.md  OBSERVABILITY_PLAN.md  OWNED_REQUIREMENTS.csv  README.md  RELEVANT_ADRS.md  RELEVANT_TECH_SPECS.md  SATURATION_CONTRACT.yaml  SECURITY_AND_AUTHORITY_BOUNDARIES.md  STORY_CONTRACT.yaml  TEST_PLAN.md
01_ATOMIC_HARNESS_BUILDER/development-capsules/ST-02.05/: ALLOWED_FILE_SCOPE.yaml  AMENDED_STORY_REFERENCES.yaml  COMPLETION_RECEIPT_TEMPLATE.yaml  CONTRACT_AND_SCHEMA_REFERENCES.yaml  DECLARED_BOUNDARY_INPUT.json  IMPLEMENTATION_AUTHORIZATION.yaml  OWNED_REQUIREMENTS.csv  README.md  RELEVANT_TECH_SPECS.md  (+2 more)
01_ATOMIC_HARNESS_BUILDER/governance/: ASSUMPTION_REGISTER.yaml  CANONICAL_CATEGORY_REGISTRY.yaml  COMPILATION_TARGET_REGISTRY.yaml  CONVERSATIONAL_PROFILE_REGISTRY.yaml  DECISION_REGISTER.json  DECISION_REGISTER.md  EMPTY_SKILL_REGISTRY_VALIDATION_RECEIPT.json  PRODUCT_CONSTITUTION.yaml  REQUIREMENTS_COVERAGE_MAP.md  REQUIREMENTS_REGISTRY.yaml  SOURCE_REGISTER.md
01_ATOMIC_HARNESS_BUILDER/handoff/: EPICS_AND_STORIES_HANDOFF.md
01_ATOMIC_HARNESS_BUILDER/prd/: 02-users-jobs-journeys.md  07-format-category-constitutions.md  08-success-metrics.md  10-mvp-release-plan.md  11-risks-mitigations.md
01_ATOMIC_HARNESS_BUILDER/scripts/: validate_prd_package.py
01_ATOMIC_HARNESS_BUILDER/stage1/: CODEBASE_INVENTORY.md  PRD_PACKAGE_FILE_INVENTORY.csv  README.md  REPOSITORY_FILE_INVENTORY.csv  REQUIREMENT_COVERAGE_MATRIX.csv  STAGE_1_READINESS_REPORT.md  TECHNICAL_SPECIFICATION_PLAN.md
01_ATOMIC_HARNESS_BUILDER/templates/: EPIC_STORY_TEMPLATE.md
01_ATOMIC_HARNESS_BUILDER/tests/: __init__.py  source_boundary_registry.py
01_ATOMIC_HARNESS_BUILDER/validation/: EMBEDDED_VALIDATOR_RESULT.json  PRD_VALIDATION_REPORT.md  SOURCE_INTEGRITY_REPORT.json
05_ATOMIC_HARNESS_PIPELINE/: AGENTS.md  CURRENT_PROJECT_STATUS.md  README.md  pyproject.toml
05_ATOMIC_HARNESS_PIPELINE/contracts/: README.md  SHARED_CONTRACT_PIN.yaml
06_INTERVIEW_EXPRESSION/: pyproject.toml
06_INTERVIEW_EXPRESSION/contracts/: SHARED_CONTRACT_PIN.yaml
06_INTERVIEW_EXPRESSION/tests/: test_ts_int_001_source_package.py  test_ts_int_002_transcript.py  test_ts_int_003_visual.py  test_ts_int_004_expression.py  test_ts_int_005_inventory.py  test_ts_int_006_reaction.py
(+7379 files in other folders)
