[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-activations-interview-expression"
version = "0.1.0.dev1"
description = "Development-only Phase 1 shell for Interview Expression."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ca-runtime==0.1.0.dev1"]

[project.scripts]
cmf-interview = "conscious_activations_interview_expression.entrypoint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["conscious_activations_interview_expression*"]
