[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ccp-activative-intelligence-v2-reference"
version = "2.0.0"
description = "Reference contracts and deterministic lifecycle utilities for Integrated Activative Intelligence V2"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.13,<3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["activative_intelligence_v2*"]
