[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmf-activative-intelligence-runtime"
version = "0.2.0.dev1"
description = "Development-only deterministic Activative Intelligence Runtime core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ca-runtime==0.1.0.dev1"]

[project.scripts]
cmf-air = "cmf_activative_intelligence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cmf_activative_intelligence*"]

[tool.setuptools.package-data]
cmf_activative_intelligence = [
    "py.typed",
    "migrations/*.sql",
    "data/governance/*",
    "data/registries/*",
    "data/sources/**/*.yaml",
    "data/sources/**/*.md",
]
