[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-activations-interview-expression"
version = "0.4.0.dev1"
description = "Development-only deterministic Interview Expression and canonical source-package runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ca-contracts==0.1.0.dev1", "ca-runtime==0.1.0.dev1"]

[project.scripts]
cmf-interview = "conscious_activations_interview_expression.entrypoint:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["conscious_activations_interview_expression*"]

[tool.setuptools.package-data]
conscious_activations_interview_expression = ["migrations/*.sql", "py.typed"]
